--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="global-header section">
       <div class="container global-container">
         <div class="logo-container">
-          <a href="index.html" class="home-button"
+          <a class="link" href="index.html" class="home-button"
             ><span class="button">Web</span>Studio</a
           >
         </div>
@@ -437,3 +437,4 @@
     <script src="./css/form.js" type="text/javascript"></script>
   </body>
 </html>
+
