--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
   <body>
     <header class="global-header section">
-      <div class="container global-container">
-        <div class="logo-container">
-          <a class="link" href="index.html" class="home-button"
-            ><span class="button">Web</span>Studio</a
+      <div class="container container-header">
+        <div class="logo">
+          <a href="index.html" class="logo_home-button"
+            ><span class="logo_button">Web</span>Studio</a
           >
         </div>
         <div class="super-nav-class">
